# trading-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/backtest/: engine.py  metrics.py
app/data/: registry.py  types.py
app/data/sources/: base.py  binance_public.py  yfinance_source.py
app/risk/: drawdown.py  sizing.py
app/strategy/: base.py  demo_trend.py
tests/: test_backtest_smoke.py  test_risk_sizing.py
trading_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
